テンプレート修正（CSSを適用）

--- a/assets/tmpl/article.html
+++ b/assets/tmpl/article.html
@@ -3,23 +3,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="ja" xml:lang="ja">
 <head profile="http://purl.org/net/ns/metaprof">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="stylesheet" type="text/css" href="../import.css" />
+<link rel="stylesheet" type="text/css" href="/css/galaxy/import.css" />
 <link rel="stylesheet" type="text/css" href="debug/debug.css" />
-
-<!-- Auto Reload
-<META HTTP-EQUIV="Refresh" Content="3">
-<META HTTP-EQUIV="Pragma" CONTENT="no-cache">
- -->
- 
-<!-- Jquery -->
-<script type="text/javascript" src="debug/jquery141.js"></script>
-<script type="text/javascript" src="debug/debug.js"></script>
 
 <title>Index</title>
 </head>
-<body class="mainIndex double"> <!-- ★ほらみてココ！ このclass=""の中身が切り替わってレイアウトが変わる仕組みです。-->
+<body class="mainIndex double">
 <div id="header">
- <p class="siteName"><a href="#">Skin Preview</a></p>
+ <p class="siteName"><a href="#">[% setting.title %]</a></p>
  <p class="description">Vicuna Custom Skin</p>
  <ul id="globalNavi">
   <li class="current"><a href="#">About</a></li>
