管理画面のテンプレート追加

--- a/assets/tmpl/admin/root/index.html
+++ b/assets/tmpl/admin/root/index.html
@@ -1,1 +1,13 @@
-admin
+            <div id="left-column">
+            </div>
+            <div id="center-column">
+                <div class="top-bar">
+                    <h1>[% setting.title %]管理画面</h1>
+                    <div class="breadcrumbs"> / </div>
+                </div>
+            </div>
+            <div id="right-column">
+                <strong class="h">Memo</strong>
+                <div class="box">上のメニューを選ぶべし</div>
+            </div>
+
