記事管理ページ追加

--- a/assets/tmpl/admin.html
+++ b/assets/tmpl/admin.html
@@ -12,7 +12,7 @@
             <ul id="top-navigation">
                 <li><a href="#" class="active">Home</a></li>
                 <li><a href="/user/">ユーザー</a></li>
-                <li><a href="/user/">記事</a></li>
+                <li><a href="/article/">記事</a></li>
                 <li><a href="/user/">コメント</a></li>
                 <li><a href="/user/">トラックバック</a></li>
                 <li><a href="/user/">リンク</a></li>
