--- a/assets/tmpl/admin/article/index.html
+++ b/assets/tmpl/admin/article/index.html
@@ -1,16 +1,4 @@
-            <div id="left-column">
-                <h3>Header</h3>
-                <ul class="nav">
-                    <li><a href="#">Lorem Ipsum dollar</a></li>
-                    <li><a href="#">Dollar</a></li>
-                    <li><a href="#">Lorem dollar</a></li>
-                    <li><a href="#">Ipsum dollar</a></li>
-                    <li><a href="#">Lorem Ipsum dollar</a></li>
-                    <li><a href="#">Dollar Lorem Ipsum</a></li>
-                </ul>
-                <a href="#" class="link">Link here</a>
-                <a href="#" class="link">Link here</a>
-            </div>
+[% INCLUDE 'include/admin/article/menu.html' %]
             <div id="center-column">
                 <div class="top-bar">
                     <a href="#" class="button">ADD NEW</a>
