--- a/assets/tmpl/admin/article/index.html
+++ b/assets/tmpl/admin/article/index.html
@@ -16,86 +16,27 @@
                 <div class="table">
                     <table class="listing" cellpadding="0" cellspacing="0">
                         <tr>
-                            <th>Header Here</th>
-                            <th>Header</th>
-                            <th>Head</th>
-                            <th>Header</th>
-                            <th>Header</th>
-                            
-                            <th>Head</th>
-                            <th>Header</th>
-                            <th>Head</th>
+                            <th>Title</th>
+                            <th>Body</th>
+                            <th>Category</th>
+                            <th>Edit</th>
+                            <th>Delete</th>
                         </tr>
+                        [% UNLESS articles %]
                         <tr>
-                            <td class="style1">- Lorem Ipsum </td>
-                            <td><img src="/img/admin/add-icon.gif" width="16" height="16" alt="" /></td>
-                            <td><img src="/img/admin/hr.gif" width="16" height="16" alt="" /></td>
-                            <td><img src="/img/admin/save-icon.gif" width="16" height="16" alt="" /></td>
-                            <td><img src="/img/admin/edit-icon.gif" width="16" height="16" alt="" /></td>
-                            <td><img src="/img/admin/login-icon.gif" width="16" height="16" alt="" /></td>
-                            <td><img src="/img/admin/save-icon.gif" width="16" height="16" alt="save" /></td>
-                            <td><img src="/img/admin/add-icon.gif" width="16" height="16" alt="add" /></td>
+                          <td colspan="5">No Article</td>
                         </tr>
-                        <tr>
-                            <td class="style2">- Lorem Ipsum </td>
-                            <td><img src="/img/admin/add-icon.gif" width="16" height="16" alt="add" /></td>
-                            <td><img src="/img/admin/hr.gif" width="16" height="16" alt="" /></td>
-                            <td><img src="/img/admin/save-icon.gif" width="16" height="16" alt="save" /></td>
-                            <td><img src="/img/admin/edit-icon.gif" width="16" height="16" alt="edit" /></td>
-                            <td><img src="/img/admin/login-icon.gif" width="16" height="16" alt="login" /></td>
-                            <td><img src="/img/admin/save-icon.gif" width="16" height="16" alt="save" /></td>
-                            <td><img src="/img/admin/add-icon.gif" width="16" height="16" alt="add" /></td>
-                        </tr>
-                        <tr>
-                            <td class="style3">- Lorem Ipsum </td>
-                            <td><img src="/img/admin/add-icon.gif" width="16" height="16" alt="add" /></td>
-                            <td><img src="/img/admin/hr.gif" width="16" height="16" alt="" /></td>
-                            <td><img src="/img/admin/save-icon.gif" width="16" height="16" alt="save" /></td>
-                            <td><img src="/img/admin/edit-icon.gif" width="16" height="16" alt="edit" /></td>
-                            <td><img src="/img/admin/login-icon.gif" width="16" height="16" alt="login" /></td>
-                            <td><img src="/img/admin/save-icon.gif" width="16" height="16" alt="save" /></td>
-                            <td><img src="/img/admin/add-icon.gif" width="16" height="16" alt="add" /></td>
-                        </tr>
-                        <tr>
-                            <td class="style1">- Lorem Ipsum </td>
-                            <td><img src="/img/admin/add-icon.gif" width="16" height="16" alt="add" /></td>
-                            <td><img src="/img/admin/hr.gif" width="16" height="16" alt="" /></td>
-                            <td><img src="/img/admin/save-icon.gif" width="16" height="16" alt="save" /></td>
-                            <td><img src="/img/admin/edit-icon.gif" width="16" height="16" alt="edit" /></td>
-                            <td><img src="/img/admin/login-icon.gif" width="16" height="16" alt="login" /></td>
-                            <td><img src="/img/admin/save-icon.gif" width="16" height="16" alt="save" /></td>
-                            <td><img src="/img/admin/add-icon.gif" width="16" height="16" alt="add" /></td>
-                        </tr>
-                        <tr>
-                            <td class="style2">- Lorem Ipsum </td>
-                            <td><img src="/img/admin/add-icon.gif" width="16" height="16" alt="add" /></td>
-                            <td><img src="/img/admin/hr.gif" width="16" height="16" alt="" /></td>
-                            <td><img src="/img/admin/save-icon.gif" width="16" height="16" alt="save" /></td>
-                            <td><img src="/img/admin/edit-icon.gif" width="16" height="16" alt="edit" /></td>
-                            <td><img src="/img/admin/login-icon.gif" width="16" height="16" alt="login" /></td>
-                            <td><img src="/img/admin/save-icon.gif" width="16" height="16" alt="save" /></td>
-                            <td><img src="/img/admin/add-icon.gif" width="16" height="16" alt="add" /></td>
-                        </tr>
-                        <tr>
-                            <td class="style3">- Lorem Ipsum </td>
-                            <td><img src="/img/admin/add-icon.gif" width="16" height="16" alt="add" /></td>
-                            <td><img src="/img/admin/hr.gif" width="16" height="16" alt="" /></td>
-                            <td><img src="/img/admin/save-icon.gif" width="16" height="16" alt="save" /></td>
-                            <td><img src="/img/admin/edit-icon.gif" width="16" height="16" alt="edit" /></td>
-                            <td><img src="/img/admin/login-icon.gif" width="16" height="16" alt="login" /></td>
-                            <td><img src="/img/admin/save-icon.gif" width="16" height="16" alt="save" /></td>
-                            <td><img src="/img/admin/add-icon.gif" width="16" height="16" alt="add" /></td>
-                        </tr>
-                        <tr>
-                            <td class="style4">- Lorem Ipsum </td>
-                            <td><img src="/img/admin/add-icon.gif" width="16" height="16" alt="add" /></td>
-                            <td><img src="/img/admin/hr.gif" width="16" height="16" alt="" /></td>
-                            <td><img src="/img/admin/save-icon.gif" width="16" height="16" alt="save" /></td>
-                            <td><img src="/img/admin/edit-icon.gif" width="16" height="16" alt="edit" /></td>
-                            <td><img src="/img/admin/login-icon.gif" width="16" height="16" alt="login" /></td>
-                            <td><img src="/img/admin/save-icon.gif" width="16" height="16" alt="save" /></td>
-                            <td><img src="/img/admin/add-icon.gif" width="16" height="16" alt="add" /></td>
-                        </tr>
+                        [% ELSE %]
+                          [% FOREACH article = articles.next %]
+                            <tr>
+                                <td class="style1">[% article.title %]</td>
+                                <td><img src="/img/admin/hr.gif" width="16" height="16" alt="" /></td>
+                                <td><img src="/img/admin/save-icon.gif" width="16" height="16" alt="" /></td>
+                                <td><img src="/img/admin/edit-icon.gif" width="16" height="16" alt="" /></td>
+                                <td><img src="/img/admin/login-icon.gif" width="16" height="16" alt="" /></td>
+                            </tr>
+                          [% END %]
+                        [% END %]
                     </table>
                     <div class="select">
                         <strong>Other Pages: </strong>
