管理画面のテンプレートを変えた

--- a/assets/tmpl/admin.html
+++ b/assets/tmpl/admin.html
@@ -1,29 +1,126 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="ja">
 <head>
-    <title>[% title %] | 管理画面 | [% setting.title %]</title>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-    <link  href="/css/admin.css" rel="stylesheet" type="text/css" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>[% title %] | [% setting.title %]</title>
+  <link rel="stylesheet" href="/css/admin/base.css" type="text/css" media="screen" />
+  <link rel="stylesheet" id="current-theme" href="/css/admin/themes/default/style.css" type="text/css" media="screen" />
+  <script type="text/javascript" charset="utf-8" src="/js/jquery-1.4.2.min.js"></script>
+  <script type="text/javascript" charset="utf-8" src="/js/jquery.scrollTo.js"></script>
+  <script type="text/javascript" charset="utf-8" src="/js/jquery.localscroll.js"></script>
+  <script type="text/javascript" charset="utf-8">
+    // <![CDATA[
+    var Theme = {
+      activate: function(name) {
+        window.location.hash = 'themes/' + name
+        Theme.loadCurrent();
+      },
+
+      loadCurrent: function() {
+        var hash = window.location.hash;
+        if (hash.length > 0) {
+          matches = hash.match(/^#themes\/([a-z0-9\-_]+)$/);
+          if (matches && matches.length > 1) {
+            $('#current-theme').attr('href', '/css/admin/themes/' + matches[1] + '/style.css');
+          } else {
+            alert('theme not valid');
+          }
+        }
+      }
+    }
+
+    $(document).ready(function() {
+      Theme.loadCurrent();
+      $.localScroll();
+      $('.table :checkbox.toggle').each(function(i, toggle) {
+        $(toggle).change(function(e) {
+          $(toggle).parents('table:first').find(':checkbox:not(.toggle)').each(function(j, checkbox) {
+            checkbox.checked = !checkbox.checked;
+          })
+        });
+      });
+    });
+    // ]]>
+  </script>
 </head>
 <body>
-    <div id="main">
-        <div id="header">
-            <a href="#" class="logo"><img src="/img/admin/logo.gif" width="101" height="29" alt="" /></a>
-            <ul id="top-navigation">
-                <li><a href="#" class="active">Home</a></li>
-                <li><a href="/user/">ユーザー</a></li>
-                <li><a href="/article/">記事</a></li>
-                <li><a href="/user/">コメント</a></li>
-                <li><a href="/user/">トラックバック</a></li>
-                <li><a href="/user/">リンク</a></li>
-                <li><a href="/user/">ログ</a></li>
-                <li><a href="/user/">設定</a></li>
-            </ul>
-        </div>
-        <div id="middle">
-            [% INCLUDE $view %]
-        </div>
-        <div id="footer"><p>Developed by <a href="http://twitter.com/umutm">Umut Muhaddisoglu</a> 2008. Updated for HTML5/CSS3 by <a href="http://mediagearhead.com">Giles Wells</a> 2010.</p></div>
+  <div id="container">
+    <div id="header">
+      <h1><a href="index.html">Web App Theme</a></h1>
+      <div id="user-navigation">
+        <ul class="wat-cf">
+          <li><a href="#">Profile</a></li>
+          <li><a href="#">Settings</a></li>
+          <li><a class="logout" href="#">Logout</a></li>
+        </ul>
+      </div>
+      <div id="main-navigation">
+        <ul class="wat-cf">
+          <li class="first"><a href="#block-text">Main Page</a></li>
+          <li class="active"><a href="#block-text">Active</a></li>
+          <li><a href="#block-login">Login</a></li>
+          <li><a href="#block-signup">Signup</a></li>
+        </ul>
+      </div>
     </div>
+    <div id="wrapper" class="wat-cf">
+      <div id="main">
+        [% INCLUDE $view %]
+        <div id="footer">
+          <div class="block">
+            <p>Copyright &copy; 2010 Senchan all rights reserved.</p>
+          </div>
+        </div>
+      </div>
+      <div id="sidebar">
+        <div class="block">
+          <h3>Simple Block</h3>
+          <div class="content">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          </div>
+        </div>
+        <div class="block">
+          <h3>Switch Theme</h3>
+          <ul class="navigation">
+            <li><a href="#" onclick="Theme.activate('default'); return false;">Default</a></li>
+            <li><a href="#" onclick="Theme.activate('activo'); return false;">Activo</a></li>
+            <li><a href="#" onclick="Theme.activate('amro'); return false;">Amro</a></li>
+            <li><a href="#" onclick="Theme.activate('bec'); return false;">Bec</a></li>
+            <li><a href="#" onclick="Theme.activate('bec-green'); return false;">Bec-Green</a></li>
+            <li><a href="#" onclick="Theme.activate('blue'); return false;">Blue</a></li>
+            <li><a href="#" onclick="Theme.activate('djime-cerulean'); return false;">Djime-Cerulean</a></li>
+            <li><a href="#" onclick="Theme.activate('drastic-dark'); return false;">Drastic Dark</a></li>
+            <li><a href="#" onclick="Theme.activate('kathleene'); return false;">Kathleene</a></li>
+            <li><a href="#" onclick="Theme.activate('olive'); return false;">Olive</a></li>
+            <li><a href="#" onclick="Theme.activate('orange'); return false;">Orange</a></li>
+            <li><a href="#" onclick="Theme.activate('reidb-greenish'); return false;">Greenish</a></li>
+            <li><a href="#" onclick="Theme.activate('warehouse'); return false;">Warehouse</a></li>
+          </ul>
+        </div>
+        <div class="block">
+          <h3>Sidebar</h3>
+          <ul class="navigation">
+            <li><a href="#block-text">Text</a></li>
+            <li><a href="#block-tables">Tables</a></li>
+            <li><a href="#block-forms">Forms</a></li>
+            <li><a href="#block-messages">Messages</a></li>
+            <li><a href="#block-forms-2">2 Columns Forms</a></li>
+            <li><a href="#block-lists">Lists</a></li>
+          </ul>
+        </div>
+        <div class="block notice">
+          <h4>Notice Title</h4>
+          <p>Morbi posuere urna vitae nunc. Curabitur ultrices, lorem ac aliquam blandit, lectus eros hendrerit eros, at eleifend libero ipsum hendrerit urna. Suspendisse viverra. Morbi ut magna. Praesent id ipsum. Sed feugiat ipsum ut felis. Fusce vitae nibh sed risus commodo pulvinar. Duis ut dolor. Cras ac erat pulvinar tortor porta sodales. Aenean tempor venenatis dolor.</p>
+        </div>
+        <div class="block">
+          <div class="sidebar-block">
+            <h4>Sidebar Inner block Title</h4>
+            <p>Morbi posuere urna vitae nunc. Curabitur ultrices, lorem ac <a href="#">aliquam blandit</a>, lectus eros hendrerit eros, at eleifend libero ipsum hendrerit urna. Suspendisse viverra. Morbi ut magna. Praesent id ipsum. Sed feugiat ipsum ut felis. Fusce vitae nibh sed risus commodo pulvinar. Duis ut dolor. Cras ac erat pulvinar tortor porta sodales. Aenean tempor venenatis dolor.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
+
