--- a/assets/tmpl/admin/article/index.html
+++ b/assets/tmpl/admin/article/index.html
@@ -1,76 +1,33 @@
-[% INCLUDE 'include/admin/article/menu.html' %]
-            <div id="center-column">
-                <div class="top-bar">
-                    <a href="#" class="button">ADD NEW</a>
-                    <h1>Contents</h1>
-                    <div class="breadcrumbs"><a href="#">Homepage</a> / <a href="#">Contents</a></div>
-                </div>
-                <div class="select-bar">
-                    <label>
-                        <input type="text" name="textfield" />
-                    </label>
-                    <label>
-                        <input type="submit" name="Submit" value="Search" />
-                    </label>
-                </div>
-                <div class="table">
-                    <table class="listing" cellpadding="0" cellspacing="0">
-                        <tr>
-                            <th>Title</th>
-                            <th>Body</th>
-                            <th>Category</th>
-                            <th>Edit</th>
-                            <th>Delete</th>
-                        </tr>
-                        [% UNLESS articles %]
-                        <tr>
-                          <td colspan="5">No Article</td>
-                        </tr>
-                        [% ELSE %]
-                          [% FOREACH article = articles.next %]
-                            <tr>
-                                <td class="style1">[% article.title %]</td>
-                                <td><img src="/img/admin/hr.gif" width="16" height="16" alt="" /></td>
-                                <td><img src="/img/admin/save-icon.gif" width="16" height="16" alt="" /></td>
-                                <td><img src="/img/admin/edit-icon.gif" width="16" height="16" alt="" /></td>
-                                <td><img src="/img/admin/login-icon.gif" width="16" height="16" alt="" /></td>
-                            </tr>
-                          [% END %]
-                        [% END %]
-                    </table>
-                    <div class="select">
-                        <strong>Other Pages: </strong>
-                        <select>
-                            <option>1</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="table">
-                    <table class="listing form" cellpadding="0" cellspacing="0">
-                        <tr>
-                            <th class="full" colspan="2">Header Here</th>
-                        </tr>
-                        <tr>
-                            <td width="172"><strong>Lorem Ipsum</strong></td>
-                            <td><input type="text" class="text" /></td>
-                        </tr>
-                        <tr>
-                            <td><strong>Lorem Ipsum</strong></td>
-                            <td><input type="text" class="text" /></td>
-                        </tr>
-                        <tr>
-                            <td><strong>Lorem Ipsum</strong></td>
-                            <td><input type="text" class="text" /></td>
-                        </tr>
-                        <tr>
-                            <td><strong>Lorem Ipsum</strong></td>
-                            <td><input type="text" class="text" /></td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-            <div id="right-column">
-                <strong class="h">Memo</strong>
-                <div class="box">これはメモです。</div>
-            </div>
-
+<div class="block" id="block-tables">
+  <div class="content">
+    <h2 class="title">Articles</h2>
+    <div class="inner">
+      <form action="#" class="form">
+        <table class="table">
+          <tr>
+            <th class="first"><input type="checkbox" class="checkbox toggle" /></th>
+            <th>ID</th>
+            <th>Login</th>
+            <th>Name</th>
+            <th>Surname</th>
+            <th class="last">&nbsp;</th>
+          </tr>
+          <tr class="odd">
+            <td><input type="checkbox" class="checkbox" name="id" value="1" /></td><td>1</td><td>hulk</td><td>Hulk</td><td>Hogan</td><td class="last"><a href="#">show</a> | <a href="#">edit</a> | <a href="#">destroy</a></td>
+          </tr>
+          <tr class="even">
+            <td><input type="checkbox" class="checkbox" name="id" value="1" /></td><td>2</td><td>ultimate</td><td>Ultimate</td><td>Warrior</td><td class="last"><a href="#">show</a> | <a href="#">edit</a> | <a href="#">destroy</a></td>
+          </tr>
+        </table>
+        <div class="actions-bar wat-cf">
+          <div class="actions">
+            <button class="button" type="submit">
+              <img src="/img/admin/icons/cross.png" alt="Delete" /> Delete
+            </button>
+          </div>
+          [% INCLUDE 'include/pager.html' %]
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
