--- a/assets/tmpl/admin/article/index.html
+++ b/assets/tmpl/admin/article/index.html
@@ -1,4 +1,5 @@
 <div class="block" id="block-tables">
+  [% INCLUDE 'include/admin/article/menu.html' %]
   <div class="content">
     <h2 class="title">Articles</h2>
     <div class="inner">
